deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    tier: ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  ingressClassName: nginx
  rules:
    - host: "localhost"
      http:
        paths:
          - pathType: Prefix
            path: "/api(/|$)(users.*)"
            backend:
              service:
                name: user-service
                port:
                  number: 6060
          - pathType: Prefix
            path: "/api(/|$)(communities.*)"
            backend:
              service:
                name: community-service
                port:
                  number: 9090         
          - pathType: Prefix
            path: "/api(/|$)(auth.*)"
            backend:
              service:
                name: auth-service
                port:
                  number: 7070
